<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Identification">
        <EditTextPreference
            android:id="@+id/user_id"
            android:dialogTitle="@string/dialog_user_id"
            android:key="pref_user_id"
            android:title="@string/user_id" />

        <EditTextPreference
            android:dialogTitle="@string/dialog_password"
            android:inputType="textPassword"
            android:key="pref_password"
            android:title="@string/password" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Other">
        <Preference
            android:key="pref_about"
            android:title="@string/preferences_about" />
    </PreferenceCategory>
</PreferenceScreen>